messaging_app/blue_deployment.yaml
# This is the "blue" (current/stable) version of your Django app.
apiVersion: apps/v1
kind: Deployment
metadata:
  # Renamed for clarity in blue-green strategy
  name: django-messaging-app-blue-deployment
  labels:
    app: django-messaging-app-blue # Specific label for blue version
    app-version: blue # Another label to identify version
spec:
  replicas: 1 # Start with 1 replica for blue
  selector:
    matchLabels:
      app: django-messaging-app-blue
  template:
    metadata:
      labels:
        app: django-messaging-app-blue
        app-version: blue
    spec:
      containers:
      - name: django-messaging-app
        image: messaging_app-web:latest # Your Docker image for the blue version
        ports:
        - containerPort: 8000
