messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-messaging-app-ingress
  annotations:
    # Use the Nginx Ingress controller
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: django.local
    http:
      paths:
      - path: / # Route all traffic for django.local to the Django app
        pathType: Prefix
        backend:
          service:
            name: django-messaging-app-service # Name of your Django app's service
            port:
              number: 80 # The port the Django service exposes
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-messaging-app-service
            port:
              number: 80
